Add flex to centre game

--- a/game.html
+++ b/game.html
@@ -1,6 +1,16 @@
 <html>
-  <canvas id="gameCanvas" width="800" height="600">
-    
-  </canvas>
+  <title>Pong</title>
+  <div class="heading-container">
+    <head class="heading-container--title">
+      Pong
+    </head>
+  </div>
+
+  <div class="canvas-container">
+    <canvas class="canvas-container--gameCanvas" id="gameCanvas" width="800" height="600">
+      
+    </canvas>
+  </div>
   <script src="game.js"></script>
+  <link rel="stylesheet" href="game.css">
 </html>
