Add pong font with text resize

--- a/game.html
+++ b/game.html
@@ -1,7 +1,7 @@
 <html>
   <title>Pong</title>
   <div class="heading-container">
-    <head class="heading-container--title">
+    <head>
       Pong
     </head>
   </div>
