Add score container

--- a/game.html
+++ b/game.html
@@ -12,8 +12,13 @@
     </canvas>
   </div>
 
-  <div class="score"> 
-    SCORE:
+  <div id="score-container">
+    <div id="score-container--player-one"> 
+      SCORE:
+    </div>
+    <div id="score-container--player-two"> 
+      SCORE:
+    </div>
   </div>
   <script src="game.js"></script>
   <link rel="stylesheet" href="game.css">
