--- a/game.html
+++ b/game.html
@@ -11,6 +11,10 @@
       
     </canvas>
   </div>
+
+  <div class="score"> 
+    SCORE:
+  </div>
   <script src="game.js"></script>
   <link rel="stylesheet" href="game.css">
 </html>
